# nautilus-mailru-cloud

./: .gitignore  AuthDialogGtk.cpp  AuthDialogGtk.hpp  CMakeLists.txt  CloudMailRuExtension.cpp  CloudMailRuExtension.hpp  CloudMailRuRestAPI.cpp  CloudMailRuRestAPI.hpp  ExtensionError.hpp  FileInfo.hpp  GUIProvider.cpp  GUIProvider.hpp  LICENSE  Makefile  MenuItem.hpp  NautilusExtension.cpp  README.md  Test.cpp  URLTools.cpp  URLTools.hpp  boost_headers.hpp  extension_info.hpp  index.html  nautilus_mailru_cloud_gtk_gui_services.py  params.json
pkg/: nautilus-mailru-cloud_0.1-preview_amd64.build  nautilus-mailru-cloud_0.1-preview_amd64.changes  nautilus-mailru-cloud_0.1-preview_amd64.deb
pkg/nautilus-mailru-cloud-0.1-preview/debian/: README  README.source  changelog  control  copyright  files  install  nautilus-mailru-cloud.substvars
pkg/nautilus-mailru-cloud-0.1-preview/debian/nautilus-mailru-cloud/DEBIAN/: control  md5sums
pkg/nautilus-mailru-cloud-0.1-preview/debian/nautilus-mailru-cloud/usr/share/doc/nautilus-mailru-cloud/: README.Debian  copyright
